code cleanup for libraries